<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_textview"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/textview"
    />

    <Button
        android:id="@+id/button_editText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/edittext"
    />

    <Button
        android:id="@+id/button_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/button"
    />

    <Button
        android:id="@+id/button_switch"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/switch_button"
    />

    <Button
        android:id="@+id/button_spinner"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/spinner"
    />

    <Button
        android:id="@+id/button_constraint_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/constraintlayou
        t"
    />

</LinearLayout>